se modifica a lista el procesamiento y se modifica el gitignore para omitir la carpeta.idea